# hoopgt

./: .gitignore  README.md  cnn_model.pt  example_usage.py  main.py  pyproject.toml  quantized_model.pt  test_auto_quantize.py  test_model.pt  test_new_architecture.py  test_quantize_simple.py  test_unified_architecture.py  yeet.md
hoopgt/: __init__.py  cli.py  engine.py  legacy_quantize.py  optimize.py  optimize_test.py  quantization_engine.py  quantize.py  quantize_test.py  types.py
hoopgt/algorithms/: hoopgt_base.py
hoopgt/algorithms/quantization/: __init__.py  dynamic_quantization.py  mvp_dynamic.py  mvp_selector.py  mvp_static.py  static_quantization.py  torch_dynamic.py
hoopgt/config/: __init__.py  compatibility_checks.py  hoopgt_config.py  optimization_config.py  optimize_space.py  utils.py
hoopgt/logging/: filter.py  logger.py
hoopgt/telemetry/: __init__.py  config.yaml  metrics.py
hoopgt/utils/: loading.py
tests/: test_functional.py
utils/: loading.py
