[project]
name = "hoopgt"
version = "0.1.0"
description = "ðŸ€ HoopGT SDK - Model Optimization Platform"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer[all]>=0.16.0",
    "rich>=13.0.0",
    "torch>=2.0.0",
    "pytest-bdd>=8.1.0",
    "numpy>=2.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
]

[project.scripts]
hoopgt = "hoopgt.cli:app"

[project.urls]
Homepage = "https://github.com/hoopgt/hoopgt-sdk"
Repository = "https://github.com/hoopgt/hoopgt-sdk.git"
Issues = "https://github.com/hoopgt/hoopgt-sdk/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hoopgt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
