[project]
name = "hoopgt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "colorama>=0.4.6",
    "configspace>=1.2.1",
    "ipython>=9.3.0",
    "jupyter>=1.1.1",
    "opentelemetry-api>=1.34.1",
    "opentelemetry-exporter-otlp>=1.34.1",
    "opentelemetry-sdk>=1.34.1",
    "pyyaml>=6.0.2",
    "ruff>=0.12.0",
    "torch>=2.7.1",
]
